Hide navbar header buttons on mobile view to fix layout overlapping

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -249,6 +249,7 @@
   .mobileMenu { display: flex; }
   .mobileMenu:not(.mobileOpen) { display: none; }
   .topBarRight { display: none; }
+  .headerButtons { display: none; }
 }
 
 .headerButtons {
